<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/we_are_great_for_you1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeHeading"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/please_enter_your_email_and_password_to_create_an_acocunt"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/edittextemail"
                android:layout_width="268dp"
                android:layout_height="56dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/edittextpassword"
                android:layout_width="272dp"
                android:layout_height="55dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:padding="16dp">

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:text="@string/login" />

            <Button
                android:id="@+id/signupbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:text="@string/signup" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>