<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/we_are_great_for_you1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeHeading"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/welcome_to_our_service_booking_app_book_your_next_appointment_hassle_free_and_enjoy_top_notch_services_from_our_platform"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:padding="16dp">

            <Button
                android:id="@+id/userButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:text="@string/users1" />

            <Button
                android:id="@+id/businessButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:text="@string/business1" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>